cmake_minimum_required(VERSION 2.8)
project(icg15)

#--- Load the common ICG configuration
include(common/icg_settings.cmake)

#--- Week 1
#add_subdirectory(helloworld)

#--- Week 2
#add_subdirectory(intro_to_glsl)
#add_subdirectory(intro_to_glsl_SOLUTION)
#add_subdirectory(hw2p1_spiral)
#add_subdirectory(hw2p2_checkerboard)
#add_subdirectory(hw2p3_planets)

#--- Week 3
#add_subdirectory(lab3_opengl3d)
#add_subdirectory(lab3_opengl3d_SOLUTION)
#add_subdirectory(hw3_trackball)

#--- Week 4
#add_subdirectory(hw4_shading)

#--- Week 5
#add_subdirectory(lab5_bezier)
#add_subdirectory(lab5_bezier_SOLUTION)
#add_subdirectory(hw5_bezier)

#--- Week 6
#add_subdirectory(lab6_framebuffer)
#add_subdirectory(lab6_framebuffer_SOLUTION)
#add_subdirectory(hw6p1_fastsmooth)
#add_subdirectory(hw6p2_mirrorfloor)
#add_subdirectory(hw6p3_motionblur)
#add_subdirectory(lab9_shadow_maps)
#add_subdirectory(lab10_atmfx)

#--- Project
#add_subdirectory(project-draft)
add_subdirectory(project-submit)
add_subdirectory(project-dev)