get_filename_component(EXERCISENAME ${CMAKE_CURRENT_LIST_DIR} NAME)
file(GLOB_RECURSE SOURCES "*.cpp")
file(GLOB_RECURSE HEADERS "*.h")
file(GLOB_RECURSE SHADERS "*.glsl")
file(GLOB_RECURSE TEXTURE "*.tga")
add_executable(${EXERCISENAME} ${SOURCES} ${HEADERS} ${SHADERS} ${TEXTURE})
target_link_libraries(${EXERCISENAME} ${COMMON_LIBS})
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_LIST_DIR})
