get_filename_component(EXERCISENAME ${CMAKE_CURRENT_LIST_DIR} NAME)
file(GLOB_RECURSE SOURCES "*.cpp")
file(GLOB_RECURSE HEADERS "*.h")
file(GLOB_RECURSE SHADERS "*.glsl")
file(GLOB_RECURSE TEXTURE "*.tga")
add_executable(${EXERCISENAME} ${SOURCES} ${HEADERS} ${SHADERS} ${TEXTURE})
target_link_libraries(${EXERCISENAME} ${COMMON_LIBS})
set(copyfiles ${COMMON_DLLS} ${TEXTURE})
foreach(f ${copyfiles})
    if(EXECUTABLE_OUTPUT_PATH)
    file(COPY ${f} DESTINATION ${EXECUTABLE_OUTPUT_PATH})
    else()
    file(COPY ${f} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
    endif()
endforeach()
#--- Syn files while compiling
set(synfiles ${SHADERS})
foreach(f ${synfiles})
    target_deploy_file(${EXERCISENAME} ${f})
endforeach()
